# NAOFS

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  CodingGuidelines.md  Makefile  README.md  compile.sh  deploy.sh  project_test.cmake  run.sh  temp  temp.c
include/: ctest.h  fileTables.h  main.h  naotest.h
include/dsk/: blkfetch.h  bufferAccess.h  cacheParams.h  diskAccess.h  free.h  freeList.h  hashQ.h  mdisk.h  node.h
include/fdTable/: fileTables.h  globalFileTable.h
include/incoreInodeOps/: bmap.h  freeList.h  hashQ.h  iNodeManager.h  iget.h  inCoreiNode.h  iput.h  node.h
include/inode/: iNode.h  inCoreiNode.h
include/interface/: close.h  create.h  directory.h  getAttr.h  link.h  mkdir.h  open.h  read.h  rename.h  truncate.h  unlink.h  write.h
include/mandsk/: params.h
include/mkfs/: alloc.h  diskParams.h  free.h  freeBlockList.h  iNodeManager.h  ialloc.h  ifree.h  metaBlocks.h  mkfs.h
include/test/: test_utils.h
include/test/fdTable/: fileTables.h
include/test/utils/: utils.h
include/trav/: directory.h  namei.h
include/utils/: colors.h  utils.h
src/: CMakeLists.txt  TODO.md  example.cpp  example.h  fileTables.c  fileTables.h  main.c  main.h
src/dsk/: CMakeLists.txt  alloc.c  alloc.h  blkfetch.c  blkfetch.h  bmap.c  bmap.h  bufferAccess.c  diskAccess.c  free.c  free.h  freeList.c  hashQ.c  mdisk.c  mdisk.h
src/fdTable/: CMakeLists.txt  fileTables.c  globalFileTable.c
src/incoreInodeOps/: CMakeLists.txt  bmap.c  freeList.c  freeList.h  hashQ.c  hashQ.h  iNodeManager.c  iget.c  iget.h  iput.c  iput.h  node.h
src/inode/: CMakeLists.txt  iNode.c  iNode.h  inCoreiNode.c  inCoreiNode.h  inode.h
src/interface/: CMakeLists.txt  close.c  create.c  directory.c  getAttr.c  link.c  mkdir.c  open.c  read.c  rename.c  truncate.c  unlink.c  write.c
src/mandsk/: CMakeLists.txt  params.c  params.h
src/mkfs/: CMakeLists.txt  alloc.c  bmap.c  bmap.h  diskParams.h  diskReader.c  exec-mkfs.c  free.c  freeBlockList.c  freeBlockList.h  iNodeManager.c  iNodeManager.h  ialloc.c  ialloc.h  ifree.c  metaBlocks.c  metaBlocks.h  mkfs.c
src/trav/: CMakeLists.txt  directory.c  directory.h  namei.c
src/utils/: CMakeLists.txt  utils.c  utils.h
test/: CMakeLists.txt  runner.c  test_block_fetch.c
test/bash_tests/: test.sh
test/fdTable/: fileTables.c
test/testFiles/: testFile534526  testFile534527
test/utils/: test_utils.c
